dnl Process this file with autoconf to produce a configure script.
AC_INIT(calc.c)
AC_CONFIG_HEADER(calc.h)

#
# Look for various header files
#
AC_HEADER_CHECK(stdlib.h, ,AC_DEFINE(NO_STDLIB_H))

#
# Look for various functions
#
AC_FUNC_CHECK(strcmp, AC_DEFINE(HAVE_STRCMP))

#
# Output Makefile with substitutions
AC_OUTPUT(Makefile)
