dnl Process this file with autoconf to produce a configure script.
AC_INIT(paths.h.in)

sinclude(common.ac)

# Take bdpi from the `default_bdpi' variable in ./Makefile.in.
changequote(,)dnl
bdpi=`sed -n '/^default_bdpi *= *\([0-9]*\).*$/s//\1/p' Makefile.in`
default_texsizes=$(printf "define m(x,y) {\nreturn (x * (1.2 ^ y))\n}\nprint \
    ${bdpi},\":\",\
    m(${bdpi},1),\":\",\
    m(${bdpi},2),\":\",\
    m(${bdpi},3),\":\",\
    m(${bdpi},4),\":\",\
    m(${bdpi},5),\"\n\"\n" | 
    bc)
changequote([,])dnl
AC_SUBST(default_texsizes)

AC_OUTPUT(./Makefile)
