dnl Process this file with autoconf to produce a configure script.
AC_INIT(xdvi.c)

sinclude(../kpathsea/common.ac)

AC_FIND_X
AC_FIND_XTRA
AC_VPRINTF

# Take bdpi from the `default_bdpi' variable in ./Makefile.in.
changequote(,)dnl
bdpi=`sed -n '/^default_bdpi *= *\([0-9]*\).*$/s//\1/p' Makefile.in`
default_texsizes=$(printf "define m(x,y) {\nreturn (x * (1.2 ^ y))\n}\nprint \
    ${bdpi},\":\",\
    m(${bdpi},1),\":\",\
    m(${bdpi},2),\":\",\
    m(${bdpi},3),\":\",\
    m(${bdpi},4),\":\",\
    m(${bdpi},5),\"\n\"\n" | 
    bc)
changequote([,])dnl
AC_SUBST(default_texsizes)

AC_HAVE_FUNCS(getwd)

# Do we have the SIGIO signal (and F_SETOWN and FASYNC)?
echo checking for SIGIO
AC_TEST_PROGRAM(#include <signal.h>
#include <fcntl.h>
int
main () { int x = SIGIO + F_SETOWN + FASYNC; return 0; }, AC_DEFINE(HAS_SIGIO))

AC_OUTPUT(Makefile)
