
# ---------------------------------------------------------------------------
#    Configure.in for KOSHER DILL - Disk space management utility
# ---------------------------------------------------------------------------

AC_INIT()

# ---------------------------------------------------------------------------
# 	Check for existence of install programs
# ---------------------------------------------------------------------------

AC_PROG_INSTALL

# -----------------------------------------------------------------------
#
# 	Set PWD variable if vendor's /bin/sh doesn't
#
# -----------------------------------------------------------------------
PWD=`pwd`

# ---------------------------------------------------------------------------
# 	Installation path for scripts and help files
# ---------------------------------------------------------------------------

echo "Where do you want to install the "scripts" and "Help" directories?"
read KOSHERDILL_LIBRARY
if test -z "$KOSHERDILL_LIBRARY" ; then
    KOSHERDILL_LIBRARY=$PWD
fi
AC_SUBST(KOSHERDILL_LIBRARY) 

# ---------------------------------------------------------------------------
# 	Installation path for shell script
# ---------------------------------------------------------------------------

echo "Where do you want to install the kosherdill executable?"
read KOSHERDILL_PROGRAM
if test -z "$KOSHERDILL_PROGRAM" ; then
    KOSHERDILL_PROGRAM=	$PWD
fi
AC_SUBST(KOSHERDILL_PROGRAM) 

# ---------------------------------------------------------------------------
# 	BLT wish 
# ---------------------------------------------------------------------------

echo "Which wish contains BLT?"
read BLT_WISH
if test -z "$BLT_WISH" ; then
    BLT_WISH="$PWD/../../blt_wish"
fi
AC_SUBST(BLT_WISH) 

echo "setting KOSHERDILL_LIBRARY to "
echo "  \"$KOSHERDILL_LIBRARY\""
echo "setting KOSHERDILL_PROGRAM to "
echo "  \"$KOSHERDILL_PROGRAM\""
echo "setting BLT_WISH to "
echo "  \"$BLT_WISH\""

# ---------------------------------------------------------------------------
# 	Generate only the Makefile
# ---------------------------------------------------------------------------
AC_OUTPUT(Makefile)

